Fixed some layout bug

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -39,6 +39,7 @@ html, body, .container-fluid{
 }
 
 .discover_us {
+    background-color: #cecbcf;
     font-size: larger;
     font-style: italic;
     font-weight:700 ;
@@ -190,6 +191,13 @@ form > input {
     color: #dcdcdc;
 }
 
+#related-event-button, #linked-seminar-button {
+    height: 40px;
+    background-color: #393d42;
+    border-color: #393d42;
+    color: #dcdcdc;
+}
+
 #linked-seminar-box, #same-day-event {
     text-align: center;
     font-weight: bold;
@@ -236,6 +244,10 @@ form > input {
     #go-to-event-button {
         width: 91%;
     }
+
+    .performer {
+        margin-top: 20%;
+    }
 }
 
 #bookNowButton {
@@ -248,6 +260,25 @@ form > input {
     margin-left: auto;
     width: 50%;
 
+}
+
+.generic-button {
+    height: 40px;
+    background-color: #393d42;
+    border-color: #393d42;
+    color: #dcdcdc;
+}
+
+#no-reservation {
+    text-align: center;
+    font-weight: bold;
+    font-size: larger;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+#event-single-genre {
+    margin-top: 1rem;
 }
 
 
